# fcla

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
lib/: Cargo.toml
lib/src/: array.rs  c_like.rs  char.rs  coerced.rs  future.rs  iter.rs  lib.rs  map.rs  net.rs  num.rs  path.rs  phantom.rs  range.rs  sequence.rs  string.rs  sync.rs  tuple.rs  wrapper.rs
lib/src/num/: decimal.rs  duration.rs
macros/: Cargo.toml
macros/src/: derive_from_args.rs  lib.rs
