[package]
name = "fcla-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command line argument parsing"
repository = "https://github.com/MechanicalHans/fcla"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0.78"

[dependencies.quote]
version = "1.0.35"

[dependencies.syn]
version = "2.0.48"
features=["full", "extra-traits"]
